samples/_failures_safe/1761623393_296317_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2c6dd7c.c: In function ‘main’:
./samples/SAFE/__tmp_f2c6dd7c.c:154:9: error: expected ‘:’ or ‘...’ at end of input
  154 |         case 2
      |         ^~~~
./samples/SAFE/__tmp_f2c6dd7c.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2c6dd7c.c:154:9: error: expected declaration or statement at end of input
